added location support